OP plugin. Users tracking. Control plugin fixes, and, dont forgot skynet.

--- a/plugins/control/interface.html
+++ b/plugins/control/interface.html
@@ -15,7 +15,7 @@
 				<option value="stop">Stop</option>
 				<option value="raw">Raw</option>
 				<option value="say">Say</option>
-				<option value="part">Nick</option>
+				<option value="nick">Nick</option>
 				<option value="op">OP</option>
 				<option value="deop">DeOP</option>
 				<option value="join">Join</option>
@@ -39,6 +39,10 @@
 		<h3>Plugins (loaded)</h3>
 		<ul class="plugins">
 			%plugins%
+		</ul>
+		<h3>Users</h3>
+		<ul class="users">
+			%users%
 		</ul>
 		<script type="text/javascript">
 			window.WebSocket = window.WebSocket || window.MozWebSocket;
